Update navbar colours and fixes scroll bug on mobile navbar-brand bg

--- a/app/assets/v2/scss/gitcoin.scss
+++ b/app/assets/v2/scss/gitcoin.scss
@@ -99,6 +99,10 @@
   color: #757087;
 }
 
+.text-grey-500 {
+  color: #0E0333;
+}
+
 .text-current {
   color: currentColor !important;
 }
